<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_centerInParent="true"
   android:paddingStart="22dp"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="#FFFFFF">

    <!-- Dark Mode Switch -->
    <Switch
        android:id="@+id/switch_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode"
        android:thumbTint="@color/jaune_taxi"
        android:trackTint="@color/noir"/>

    <!-- Change Language Button -->
    <Button
        android:id="@+id/btn_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanc"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        android:text="@string/change_language_btn"
        android:elevation="6dp"
    android:backgroundTint="@color/jaune_taxi"
    app:cornerRadius="22dp"

    android:layout_marginTop="16dp"/>

    <!-- Logout Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanc"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        android:text="@string/log_out"
        android:elevation="6dp"
    android:backgroundTint="@color/jaune_taxi"
    app:cornerRadius="22dp"
    android:layout_marginTop="16dp"/>
</LinearLayout>
